# SKU_dashboard

./: .gitignore  Makefile  README.md  SKU.twb  pyproject.toml  requirements.txt
notebooks/.ipynb_checkpoints/: 0.1-EDA-&-visualizations-checkpoint.ipynb  0.1-initial-data-exploration-checkpoint.ipynb  0.2-initial-data-exploration-checkpoint.ipynb
notebooks/markdown/: 0.1-EDA-&-visualizations.md  0.1-clustering.md  0.1-initial-data-exploration.md  0.2-EDA-&-visualizations.md  0.2-initial-data-exploration.md  0.3-EDA-&-visualizations.md  0.4-EDA-&-visualizations.md  0.5-EDA-&-visualizations.md  0.6-EDA-&-visualizations.md
sku_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: KPI.py  cleaning.py  clustering.py  config.py  data_preparation.py  data_transformation.py  dataset.py  download_dataset.py  feature_engineering.py  outlier_removal.py  plots.py  sample.py
