[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sku_dashboard"
version = "0.1.0"
description = "Tools for data transformation used for a SKU dashboard"
authors = [{name = "Cosmin Spânu"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]